# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1312 2013/07/22 03:13:45 zmedico Exp $

  22 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Adjust repos.conf for prefix support.

  21 Jul 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.12.11.ebuild,
  -portage-2.2.0_alpha186.ebuild:
  Remove old versions.

  21 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Update for make.conf rename to make.conf.example.

  10 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.12.13.ebuild,
  portage-2.2.0_alpha188.ebuild:
  Drop unmaintained linguas_pl, bug #476368.

*portage-2.2.0_alpha188 (09 Jul 2013)

  09 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha188.ebuild,
  -portage-2.2.0_alpha187.ebuild:
  2.2.0_alpha188 version bump. This includes all of the fixes in 2.1.12.13. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.12.13 (09 Jul 2013)

  09 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.12.13.ebuild,
  -portage-2.1.12.12.ebuild:
  2.1.12.13 version bump. This fixes bug #476104 (delay emerge job scheduling
  for loadavg after SIGCONT) and bug #476312 (regression in 2.1.12.12 and
  2.2.0_alpha187 causing NameError exception for fd_pipes when a build fails).
  Bug #472632 tracks all bugs fixed since portage-2.1.12.2.

*portage-2.2.0_alpha187 (07 Jul 2013)

  07 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha187.ebuild,
  -portage-2.2.0_alpha185.ebuild:
  2.2.0_alpha187 version bump. This includes all of the fixes in 2.1.12.12. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.12.12 (07 Jul 2013)

  07 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.12.12.ebuild,
  -portage-2.1.12.10.ebuild:
  2.1.12.12 version bump. This fixes bug #475812 (support fd_pipes parameter in