@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1312 2013/07/22 03:13:45 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1313 2013/07/23 03:18:30 zmedico Exp $
+
+  23 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
+  Adjust repos.conf sync-uri for prefix support.
 
   22 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
   Adjust repos.conf for prefix support.
